Fix dark mode for Badge large view
Summary:
Replace hardcoded white background color for a Badge with variable `{$page.content}` as `CelerityDefaultPostprocessor.php` also defines `'page.content' => '#fff'`.

Note that fixing the surrounding background color is a separate topic as that uses a common variable.

Refs T15056

Test Plan:
* Go http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Create a badge; go to http://phorge.localhost/badges/view/1/
* Assign badge to a user, go to http://phorge.localhost/people/badges/1/

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26145

--- a/webroot/rsrc/css/phui/phui-badge.css
+++ b/webroot/rsrc/css/phui/phui-badge.css
@@ -84,7 +84,7 @@
 }
 
 .phui-badge-illustration {
-  background-color: #fff;
+  background-color: {$page.content};
   box-shadow: inset 0 -1px 1px 0 rgba({$alphablack},.1);
   text-align: center;
   height: 100px;
